--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
       font-size: 24px;
     }
 
+    
     textarea {
       height: 200px;
       font-size: 18px;
@@ -78,11 +79,11 @@
 
     .card {
       float: left;
-      height: 40rem;
+      height: 35rem;
       padding: 30px;
       margin: 10px;
       border-radius: 5%;
-      overflow:hidden;
+      overflow:scroll;
     }
 
     .form-control {
