--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
     <h1 class="display-4">The Newsroom</h1>
     <hr class="my-4" style="background-color: black !important;">
     <p class="lead"> For Coverage You Can Count On</p>
-    <a class="btn btn-light"  href="" role="button">Saved Articles</a>
+    <button class="btn btn-light findSaved"  role="button">Saved Articles</button>
     <button class="btn btn-dark" id="letsScrape" role="button">Let's Scrape!</button>
   </div>
 
@@ -126,9 +126,7 @@
       <div class="row">
         <div class="col-12">
           <div id="artCount" ></div>
-          <div id="articles">
-           
-          </div>
+          <div id="articles">  </div>
           <div id="comments"></div>
 
         </div>
