saving articles working

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       background-color: rgba(255, 255, 255, 0.589);
     }
 
-    #articles {
+    #articles, #savedArticles {
       display: inline-block;
       overflow: auto;
       height: 700px;
@@ -125,8 +125,10 @@
     <div class="container articlesCont">
       <div class="row">
         <div class="col-12">
-          <div id="artCount" ></div>
+          <div id="artCount"></div>
           <div id="articles">  </div>
+          <div class="container savedCont"></div>
+              <div id="savedArticles">  </div>
           <div id="comments"></div>
 
         </div>
