--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       font-family: 'Times New Roman', Times, serif;
     }
     body {
-      background: url("../uploads/news2.jpg")no-repeat center center fixed;
+      background: url("../uploads/news.jpg")no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -32,7 +32,7 @@
   }
 
   .jumbotron{
-    background-color: rgba(255, 255, 255, 0.589);
+    background-color: rgba(255, 255, 255, 0.678);
     padding-left: 150px;
   }
 
@@ -117,7 +117,7 @@
     <h1 class="display-4">The Newsroom</h1>
     <hr class="my-4" style="background-color: black !important;">
     <p class="lead"> For Coverage You Can Count On</p>
-    <a class="btn btn-light viewSaved" href="saved.html" role="button">View Saved</a>
+    <a class="btn btn-outline-dark viewSaved" href="saved.html" role="button">View Saved</a>
     <button class="btn btn-dark" id="letsScrape" role="button">Let's Scrape!</button>
   </div>
 
@@ -127,8 +127,6 @@
         <div class="col-12">
           <div id="artCount" ></div>
           <div id="articles">  </div>
-          <!-- <div class="container savedCont">
-              <div id="savedArticles">  </div> -->
           <div id="comments"></div>
 
         </div>
