mongoose connection working locally

--- a/public/saved.html
+++ b/public/saved.html
@@ -36,12 +36,13 @@
             padding-left: 150px;
         }
 
-        #artCount, #saveArticles{
+        #artCount,
+        #saveArticles {
             font-size: 1.5rem;
         }
 
-        .articlesCont, .savedContainer
-         {
+        .articlesCont,
+        .savedContainer {
             width: 100%;
             margin-left: auto;
             margin-right: auto;
@@ -122,15 +123,14 @@
         <p class="lead"> For Coverage You Can Count On</p>
         <a class="btn btn-outline-dark " href="/" role="button">Home</a>
         <button class="btn btn-outline-secondary findSaved" role="button">Saved Articles</button>
-        <!-- <button class="btn btn-dark" id="letsScrape" role="button">Let's Scrape!</button> -->
     </div>
     <div id="wrapper">
         <div class="container savedContainer">
             <div class="row">
                 <div class="col-12">
-                        <div id="saveArticles"> </div>
+                    <div id="saveArticles"> </div>
                     <div class=" savedCont"></div>
-          
+
                     <div id="comments"></div>
 
                 </div>
